增加多地区每日图片抓取能力
